force-app/main/default/objects/Product_information__c/Product_information__c.object-meta.xml
<CustomObject>
    <description>This object reflects the configuration of the product depending on the house country.</description>
    <label>Product information</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Product information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products infromation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>