force-app/main/default/objects/Product_information__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Reflects the status of the product information (active or inactive).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>