force-app/main/default/objects/Product_information__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <description>List of available commission</description>
    <label>Commission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commission_types</valueSetName>
    </valueSet>
</CustomField>