force-app/main/default/objects/Product_information__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>List of available countries</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conutry</valueSetName>
    </valueSet>
</CustomField>