force-app/main/default/objects/Product_information__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value to be applied to the product into a country per commission.</description>
    <label>Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>